# contextcompiler

./: .gitignore  ARCHITECTURE.md  LLM.md  README.md  TODO.md  ccc-workspace.yml  llm-context-setup.py  pyproject.toml
.github/workflows/: test.yml
ccc/: __init__.py  alignment.py  cli.py  config.py  doctor.py  fileindex.py  generator.py  manifest.py  models.py  query.py  watch.py
ccc/extractors/: __init__.py  base.py  python.py  typescript.py
ccc/generators/: __init__.py  base.py  capabilities.py  claude_md.py  contracts.py  database.py  dependencies.py  entrypoints.py  external.py  pkml.py  schemas.py  summaries.py  symbols.py  tree.py
ccc/security/: manager.py  modes.py  redactor.py
ccc/utils/: files.py  formatting.py  hashing.py
ccc/workspace/: __init__.py  __init__workspace.py  aggregator.py  cli.py  conflicts.py  discover.py  index.py  init.py  manifest.py  query.py  serve.py
ccc_contextcompiler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: TESTING.md
docs/examples/python-fastapi/: LLM.md  external-dependencies.json  routes.txt  schemas-extracted.py
docs/vscode-copilot/: README.md  post-commit
docs/vscode-copilot/.github/: copilot-instructions.md
product-knowledge/: pkml.json
tests/: README.md  run_reasoning_tests.py  run_tests.py
tests/fixtures/multi-repo/: ccc-workspace.yml
tests/fixtures/multi-repo/api-gateway/: package.json  JSON
tests/fixtures/multi-repo/auth-service/: package.json
tests/fixtures/multi-repo/user-service/: package.json  JSON
tests/fixtures/python-fastapi/: .env.example  main.py  models.py  pyproject.toml  requirements.txt
tests/fixtures/typescript-express/: package.json
tests/integration/: test_conflicts.py  test_current_functionality.py  test_external_dependencies.py  test_workspace.py
workspace-context/: discovered-relationships.json  discovered-relationships.md  service-index.json
(+7 files in other folders)
