[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ccc-contextcompiler"
version = "0.1.0"
description = "Generate structured, LLM-optimized context from codebases and workspaces"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lukas B" }]
requires-python = ">=3.10"

keywords = [
    "llm", "context", "code-analysis", "developer-tools",
    "ai", "codebase", "workspace", "pkml",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# All dependencies are optional — core works with zero installs
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
watch = ["watchdog>=3.0"]
ai = ["anthropic>=0.25", "openai>=1.0"]
all = ["pyyaml>=6.0", "watchdog>=3.0", "anthropic>=0.25", "openai>=1.0"]

[project.scripts]
ccc = "ccc.cli:main"

[project.urls]
Homepage = "https://github.com/benneberg/contextcompiler"
Repository = "https://github.com/benneberg/contextcompiler"
Issues = "https://github.com/benneberg/contextcompiler/issues"

[tool.setuptools.packages.find]
include = ["ccc*"]

[tool.setuptools.package-data]
ccc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
